welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:64: error: not found: value COlor
  faireV(COlor.GREEN)
         ^